# sourdough-order-cli

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  DEV_NOTES.md  NEXT_STEPS.md  README.md  STATE.md  project-log.md
dev/ai/scratchpad/: menu.rs  order.rs
dev/logs/: project-log.md
docs/: ACCEPTANCE_TESTS.md  NOTE.md  REQUIREMENTS.md  USER_STORIES.md
meta/: chatgpt-formatting-tips.md  codex-checklist.md
src/: main.rs  menu.rs  order.rs  orders.json  sms.rs
