[package]
name = "sourdough-order-cli"
version = "0.1.0"
edition = "2024"


[dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
dotenv = "0.15"
chrono = { version = "0.4.41", features = ["serde"] }
dialoguer = "0.11.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.17.0", features = ["v4"] }
